# astrobot

./: .env.example  .gitignore  README.md  config.example.toml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/: config.py  enums.py  exceptions.py  keyboard_manager.py  messages.py  paths.py  scheduler.py  translations.py  utils.py
src/astro_engine/: utils.py
src/astro_engine/moon/: blank_moon.py
src/filters/: check_sub.py  is_date.py  role.py
src/keyboards/: builder.py  buttons.py  keyboards.py
src/middlewares/: album.py  data_in_redis.py
src/payments/: services.py  utils.py
src/routers/admin/: general_predictions.py  statistics.py
src/routers/user/: about.py  birth.py  card_of_day.py  compatibility.py  dreams.py  profile_settings.py  start.py
src/routers/user/moon_in_sign/: handlers.py
src/routers/user/prediction/: on_date.py  text_formatting.py
tests/: test_payments.py
tests/data/: day_selection_formatted.txt  day_selection_not_formatted.txt  day_selection_with_duplicates.txt  lunar_days.txt
tests/test_astro_engine/: test_aries_entry.py  test_astro_events.py  test_blank_moon.py  test_day_selection.py  test_juliday.py  test_lunar_days.py  test_mono_astro_events.py  test_moon_position.py  test_moon_sign.py  test_sideric.py
